copywriter info add

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
             </div>
         </div>
         <div></div>
+        <div id="copywriter">&#169; Maciej Szczepański</div>
     </section>
     <!--Mobile menu-->
     <section id="asideMenu">
