add text to projects

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <img src="./icons/ai_pink.png" alt="js_pink_icon">
                                 <img src="./icons/sass_pink.png" alt="sass_pink_icon">
                             </span>
-                            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque ipsa quod totam magnam, facere et suscipit assumenda sit accusantium dignissimos laboriosam cupiditate aperiam est tempora excepturi doloremque velit quos adipisci?</span>
+                            <span>Aplikacja pozwalająca sprawdzić pogodę w danym mieście. Ten projekt miał na celu zapoznanie się ze sposobem wykorzystywania zewnętrznego <b>API</b>.</span>
                             <div class="btnsContainer">
                                 <a class="linkIcons" href="https://github.com/woodrejs/weatherApp"></a>
                                 <a class="linkIcons" href="https://woodrejs.github.io/weatherApp/"></a>
@@ -101,18 +101,17 @@
                         <div class="botLayer sphere"></div>
                         <div class="topLayer sphere"></div>
                         <div class="content">
-                            <span>gra 'snake'</span>
+                            <span>wyszukiwarka GitHub</span>
                             <span class="iconsContainer">
                                 <img src="./icons/html_pink.png" alt="html_pink_icon">
                                 <img src="./icons/css_pink.png" alt="css_pink_icon">
                                 <img src="./icons/js_pink.png" alt="js_pink_icon">
-                                <img src="./icons/ai_pink.png" alt="ai_pink_icon">
                                 <img src="./icons/sass_pink.png" alt="sass_pink_icon">
                             </span>
-                            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque ipsa quod totam magnam, facere et suscipit assumenda sit accusantium dignissimos laboriosam cupiditate aperiam est tempora excepturi doloremque velit quos adipisci?</span>
+                            <span>Aplikacja korzystająca z zewnętzrznego <b>API</b> do wyszukiwania informacji na stronie github. Responsywna, napisana w JS,Sass oraz HTML.</span>
                             <div class="btnsContainer">
-                                <a class="linkIcons" href="https://github.com/woodrejs/snake"></a>
-                                <a class="linkIcons" href="https://woodrejs.github.io/snake/"></a>
+                                <a class="linkIcons" href="https://github.com/woodrejs/github-App"></a>
+                                <a class="linkIcons" href="https://woodrejs.github.io/github-App/"></a>
                             </div>
                         </div>
                     </div>
@@ -131,7 +130,7 @@
                                 <img src="./icons/ai_pink.png" alt="ai_pink_icon">
                                 <img src="./icons/sass_pink.png" alt="sass_pink_icon">
                             </span>
-                            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque ipsa quod totam magnam, facere et suscipit assumenda sit accusantium dignissimos laboriosam cupiditate aperiam est tempora excepturi doloremque velit quos adipisci?</span>
+                            <span>Strona informacyjna pracowni kaletniczej. Projekt był okazją do nauki <b>bootstrapa</b>. Wszystkie ikony wykonane są w <b>adobe illustrator</b>. Strona jest responsywna. </span>
                             <div class="btnsContainer">
                                 <a class="linkIcons" href="https://github.com/woodrejs/woodrejs"></a>
                                 <a class="linkIcons" href="https://woodrejs.netlify.com/"></a>
@@ -151,7 +150,7 @@
                                 <img src="./icons/js_pink.png" alt="js_pink_icon">
                                 <img src="./icons/sass_pink.png" alt="sass_pink_icon">
                             </span>
-                            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque ipsa quod totam magnam, facere et suscipit assumenda sit accusantium dignissimos laboriosam cupiditate aperiam est tempora excepturi doloremque velit quos adipisci?</span>
+                            <span>Prosty kalkulator wykonany z wykorzystaniem sass oraz js. Projekt miał na celu zaznajomienie się z obiektem <b>'Math</b> oraz operacjami na liczbach.</span>
                             <div class="btnsContainer">
                                 <a class="linkIcons" href="https://github.com/woodrejs/calculator"></a>
                                 <a class="linkIcons" href="https://woodrejs.github.io/calculator/"></a>
@@ -164,17 +163,18 @@
                         <div class="botLayer sphere"></div>
                         <div class="topLayer sphere"></div>
                         <div class="content">
-                            <span>wyszukiwarka GitHub</span>
+                            <span>gra 'snake'</span>
                             <span class="iconsContainer">
                                 <img src="./icons/html_pink.png" alt="html_pink_icon">
                                 <img src="./icons/css_pink.png" alt="css_pink_icon">
                                 <img src="./icons/js_pink.png" alt="js_pink_icon">
+                                <img src="./icons/ai_pink.png" alt="ai_pink_icon">
                                 <img src="./icons/sass_pink.png" alt="sass_pink_icon">
                             </span>
-                            <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque ipsa quod totam magnam, facere et suscipit assumenda sit accusantium dignissimos laboriosam cupiditate aperiam est tempora excepturi doloremque velit quos adipisci?</span>
+                            <span>Klasyczna gra 'snake'. Na tym projekcie uczyłem się korzystać z elementu <b>'canvas', klas oraz obiektów</b>. Gra jest w pełni responsywna.</span>
                             <div class="btnsContainer">
-                                <a class="linkIcons" href="https://github.com/woodrejs/github-App"></a>
-                                <a class="linkIcons" href="https://woodrejs.github.io/github-App/"></a>
+                                <a class="linkIcons" href="https://github.com/woodrejs/snake"></a>
+                                <a class="linkIcons" href="https://woodrejs.github.io/snake/"></a>
                             </div>
                         </div>
                     </div>
